# example_using_custom_spdlog

./: .gitignore  CMakeLists.txt  main.cpp
